--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Hatman52/testProject#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "create-react-app": "^3.4.0",
+    "express": "^4.17.1",
+    "react": "^16.13.0"
   }
 }
